Fix dark mode
* There was a missing curly bracket

--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -127,7 +127,7 @@ div.cardsection {
     max-width: 100%;
     width: 85vw;
   }
-  
+
   div.card {
     width: auto;
     height: auto;
@@ -171,9 +171,8 @@ img.cardlogo {
   width: 5em;
   height: 5em;
   align-content: center;
-  border-radius:50%;
-  border: 2px
-  solid black
+  border-radius: 50%;
+  border: 2px solid black
 }
 
 /* ---------- Text ---------- */
@@ -347,7 +346,7 @@ img.cardheader {
 
   a:visited {
     color: black;
-  } 
+  }
 
   /* Buttons */
   input[type=button] {
@@ -369,99 +368,73 @@ img.cardheader {
   hr.cardheader {
     border: 1px solid gray;
   }
-
-/*--------------- Dark mode colors ---------------*/
-@media (prefers-color-scheme: dark) {
-
-  /* Body */
-  body {
-    background: #0f0f0f;
-    color: white;
-  }
-
-  hr {
-    border: 1px solid grey;
-  }
-
-  /* Header */
-  div.header {
-    background-color: #1f1f1f;
-  }
-
-  /* Cards */
-  div.card {
-    background-color: #222;
-  }
-
-  div.projectcard {
-    background-color: #222;
-  }
-
-  h3.cardsectiontitle {
-    background-color: #1c4646;
-    color: #aadddd;
-  }
-
-  div.cardsection {
-    color: lightgrey;
-    background-color: #0f0f0f;
-  }
-
-  /* Links */
-  a:link {
-    color: white;
-  }
-
-  a:visited {
-    color: white;
-  }
-
-  /* Buttons */
-  input[type=button] {
-    background-color: #1c4646;
-    color: #aadddd;
-  }
-
-  input[type=button]:hover {
-    background-color: white;
-    color: black;
-  }
-
-  /* Text */
-  em.code {
-    color: black;
-    background-color: grey;
-  }
-
-  /* Dividers */
-  hr.cardheader {
-    border: 1px solid lightgray;
-  }
-
-  /* Animations */
-  @keyframes enlargeimage {
-    0% {
-      transform: scale(100%);
-      box-shadow: 0px 0px 0px 1500px rgba(0, 0, 0, 0);
-      z-index: 999;
-    }
-
-    100% {
-      transform: scale(130%);
-      box-shadow: 0px 0px 0px 1500px rgba(0, 0, 0, 0.9);
-      z-index: 999;
-    }
-  }
-
-  @keyframes shrinkimage {
-    0% {
-      transform: scale(130%);
-      box-shadow: 0px 0px 0px 1500px rgba(0, 0, 0, 0.9);
-    }
-
-    100% {
-      transform: scale(100%);
-      box-shadow: 0px 0px 0px 1500px rgba(0, 0, 0, 0);
-    }
-  }
 }
+
+  /*--------------- Dark mode colors ---------------*/
+  @media (prefers-color-scheme: dark) {
+
+    /* Body */
+    body {
+      background: #0f0f0f;
+      color: white;
+    }
+
+    hr {
+      border: 1px solid grey;
+    }
+
+    /* Header */
+    div.header {
+      background-color: #1f1f1f;
+    }
+
+    /* Cards */
+    div.card {
+      background-color: #222;
+    }
+
+    div.projectcard {
+      background-color: #222;
+    }
+
+    h3.cardsectiontitle {
+      background-color: #1c4646;
+      color: #aadddd;
+    }
+
+    div.cardsection {
+      color: lightgrey;
+      background-color: #0f0f0f;
+    }
+
+    /* Links */
+    a:link {
+      color: white;
+    }
+
+    a:visited {
+      color: white;
+    }
+
+    /* Buttons */
+    input[type=button] {
+      background-color: #1c4646;
+      color: #aadddd;
+    }
+
+    input[type=button]:hover {
+      background-color: white;
+      color: black;
+    }
+
+    /* Text */
+    em.code {
+      color: black;
+      background-color: grey;
+    }
+
+    /* Dividers */
+    hr.cardheader {
+      border: 1px solid lightgray;
+    }
+  }
